--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
             dev xây dung tieu de
         </h2>
     </header>
+    <section class="carousel">
+        
+    </section>
 </body>
 </html>
