--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h2>
             dev xây dung tieu de
         </h2>
+        
     </header>
+    <section class="welcome">
+        
+    </section>
 </body>
 </html>
